<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:padding="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="6">

        <ImageView
            android:id="@+id/BookThumbnail"
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_weight="2"
            android:background="@drawable/rectangle"
            android:contentDescription="@string/book_thumbnail"
            android:padding="8dp"
            android:src="@drawable/dummy_img" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:paddingRight="8dp">

            <TextView
                android:id="@+id/book_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginBottom="5sp"
                android:gravity="top|center"
                android:text="@string/place_holder_title"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/book_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/dummy_category"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/book_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="4sp"
                android:layout_marginTop="8dp"
                android:text="@string/dummy_price"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>