<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/search_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_book"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/colorPrimary"/>
    <LinearLayout
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10"
        android:orientation="horizontal"
        android:layout_below="@id/search_title"
        android:layout_marginTop="8dp">
        <EditText
            android:id="@+id/search_edit_frame"
            android:layout_width="wrap_content"
            android:layout_height="48sp"
            android:gravity="center"
            android:autofillHints="Romeo"
            android:inputType="text"
            android:hint="@string/book_name_hint"
            android:layout_weight="9"
            android:background="@drawable/rectangle"/>
        <ImageButton
            android:id="@+id/search_go_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_search"
            android:background="@drawable/rectangle"
            android:contentDescription="@string/search_logo_ic"
            android:onClick="SearchBooks"/>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_bar"
        android:layout_margin="16dp"/>

</RelativeLayout>